--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -108,19 +108,37 @@
                 android:textColor="@color/color333333"
                 android:textSize="26px" />
 
-            <TextView
-                android:id="@+id/tv_submit"
-                android:layout_width="match_parent"
-                android:layout_height="70px"
-                android:layout_marginBottom="120px"
-                android:layout_marginLeft="25px"
-                android:layout_marginRight="25px"
+            <com.zhy.autolayout.AutoLinearLayout
+                android:id="@+id/aly"
                 android:layout_marginTop="120px"
-                android:background="@drawable/shape_common_theme"
-                android:gravity="center"
-                android:text="提交"
-                android:textColor="@color/colorWhite"
-                android:textSize="32px" />
+                android:layout_width="match_parent"
+                android:layout_height="90px"
+                android:gravity="center_vertical"
+                android:background="#EFEEF3"
+                android:orientation="horizontal">
+                <Button
+                    android:background="@drawable/shape_red_theme"
+                    android:id="@+id/affirm1"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:layout_height="70px"
+                    android:layout_marginLeft="24px"
+                    android:layout_marginRight="24px"
+                    android:text="失败"
+                    android:layout_width="0px" />
+                <Button
+                    android:background="@drawable/shape_common_theme"
+                    android:id="@+id/tv_submit"
+                    android:layout_weight="1"
+                    android:layout_width="0px"
+                    android:textColor="@color/white"
+                    android:layout_height="70px"
+                    android:layout_marginLeft="20px"
+                    android:layout_marginRight="20px"
+                    android:text="成功"
+                    />
+
+            </com.zhy.autolayout.AutoLinearLayout>
 
         </com.zhy.autolayout.AutoLinearLayout>
         </com.zhy.autolayout.AutoLinearLayout>
