--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="colore969292">#969292</color>
     <color name="spiltline">#AAAAAA</color>
     <color name="color_999999">#999999</color>
+    <color name="color333333">#333333</color>
     <color name="colorEAEAEA">#EAEAEA</color>
     <color name="colord2b2b2b">#2B2B2B</color>
     <color name="colorLine">#EDEDED</color>
