--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
 
        <ImageView
            android:layout_gravity="center_horizontal"
-           android:background="@mipmap/ic_login"
+           android:background="@mipmap/ic_logo"
            android:layout_width="100dp"
            android:layout_height="100dp" />
         <LinearLayout
