--- a/app/src/main/res/drawable/action_button_pressed_bg.xml
+++ b/app/src/main/res/drawable/action_button_pressed_bg.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <!-- #F23E3E -->
-    <solid android:color="#F25542"/>
+    <solid android:color="#36519E"/>
     
     <corners android:radius="3dp"/>
     
