--- a/app/src/main/res/drawable/action_button_normal_bg2.xml
+++ b/app/src/main/res/drawable/action_button_normal_bg2.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" 
     android:shape="rectangle">
     
-    <solid android:color="#F7B4AD"/>
+    <solid android:color="#36519E"/>
 
     <corners android:radius="3dp"/>
 </shape>
