--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,22 +5,25 @@
         android:id="@+id/lly_body"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F2F2F2"
-        android:gravity="center"
+        android:background="#f6f6f6"
         android:orientation="vertical">
 
-       <ImageView
-           android:layout_gravity="center_horizontal"
-           android:background="@mipmap/ic_logo"
-           android:layout_width="100dp"
-           android:layout_height="100dp" />
+       <TextView
+           android:textStyle="bold"
+           android:layout_marginTop="120px"
+           android:textSize="22sp"
+           android:layout_gravity="left"
+           android:layout_marginLeft="30dp"
+           android:textColor="#333333"
+           android:text="请登录九合"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/linearlayout"
+            android:layout_marginTop="175px"
             android:orientation="vertical">
         <!--账号-->
         <LinearLayout
@@ -35,7 +38,7 @@
                 android:id="@+id/input_phone"
                 style="@style/login_field.value"
                 android:paddingRight="8dp"
-                android:hint="请输入账号"
+                android:hint="请输入手机号"
                 android:textColor="#323232"
                 android:textSize="14sp" />
             <TextView
@@ -63,7 +66,6 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
             android:background="#dddddd" />
             <android.support.v7.widget.RecyclerView
                 android:layout_marginLeft="15dp"
@@ -100,51 +102,77 @@
                 android:background="@mipmap/ic_eye1"
                 />
         </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="15dp"
+                android:background="#dddddd" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="60px"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <CheckBox
-            android:visibility="gone"
-            android:layout_marginTop="10px"
-            android:layout_marginLeft="24px"
-            android:layout_gravity="left"
+            android:layout_marginLeft="54px"
+            android:layout_gravity="center_vertical"
             android:id="@+id/RememberPasswordCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleX="0.8"
             android:scaleY="0.8"
             android:textSize="14sp"
-            android:textColor="@color/colorD0D0D0"
+            android:textColor="#666666"
             android:text="记住密码"/>
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textColor="#323232"
+                android:textSize="13sp" />
         <TextView
-            android:visibility="gone"
-            android:layout_marginTop="20dp"
-            android:layout_alignParentRight="true"
             android:id="@+id/forgetpwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginRight="24dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="54px"
             android:text="忘记密码?"
-            android:textColor="#323232"
+            android:textColor="#ff6666"
             android:textSize="13sp" />
+        </LinearLayout>
         <Button
             android:enabled="false"
             android:id="@+id/affirm"
             style="@style/SmsButton"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
-            android:layout_marginTop="63dp"
-            android:text="确认"
+            android:layout_marginTop="63px"
+            android:text="登录"
             />
         <TextView
+            android:layout_gravity="center"
             android:id="@+id/lainxi"
             android:drawablePadding="8px"
             android:layout_marginTop="100px"
-           android:drawableRight="@drawable/ic_login_left"
-            android:textColor="@color/colorF15453"
-            android:text="联系我们"
+            android:textColor="#36519E"
+            android:text="免费申请账户"
             android:textSize="14sp"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_marginTop="120px"
+            android:layout_gravity="bottom"
+            android:id="@+id/banben"
+            android:drawablePadding="8px"
+            android:textColor="#c8c8c8"
+            android:text="当前版本2.0.0"
+            android:textSize="14sp"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </com.zhy.autolayout.AutoLinearLayout>
 </layout>
