--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
-            android:layout_marginTop="175px"
+            android:layout_marginTop="165px"
             android:orientation="vertical">
         <!--账号-->
         <LinearLayout
@@ -152,7 +152,7 @@
             />
         <TextView
             android:layout_gravity="center"
-            android:id="@+id/lainxi"
+            android:id="@+id/register"
             android:drawablePadding="8px"
             android:layout_marginTop="100px"
             android:textColor="#36519E"
@@ -163,7 +163,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:layout_marginTop="120px"
+            android:layout_marginTop="100px"
             android:layout_gravity="bottom"
             android:id="@+id/banben"
             android:drawablePadding="8px"
