--- a/app/src/main/res/drawable/selector_forewarning.xml
+++ b/app/src/main/res/drawable/selector_forewarning.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_home_btn1_2" android:state_pressed="true"/>
-    <item android:drawable="@drawable/ic_home_btn1_2" android:state_checked="true"/>
-    <item android:drawable="@drawable/ic_home_btn1" />
+    <item android:drawable="@drawable/early_warning_select_icon" android:state_pressed="true"/>
+    <item android:drawable="@drawable/early_warning_select_icon" android:state_checked="true"/>
+    <item android:drawable="@drawable/early_warning_nomal_icon" />
 </selector>
