--- a/app/src/main/res/drawable/selector_myuser.xml
+++ b/app/src/main/res/drawable/selector_myuser.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_home_btn4_2" android:state_pressed="true"/>
-    <item android:drawable="@drawable/ic_home_btn4_2" android:state_checked="true"/>
-    <item android:drawable="@drawable/ic_home_btn4" />
+    <item android:drawable="@drawable/mine_select_icon" android:state_pressed="true"/>
+    <item android:drawable="@drawable/mine_select_icon" android:state_checked="true"/>
+    <item android:drawable="@drawable/mine_nomal_icon" />
 </selector>
