--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,14 +2,15 @@
 <resources>
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#ffffff</color>
-    <color name="colorAccent">#36519E</color>
-    <color name="colorTheme">#36519E</color>
+    <color name="colorAccent">#2E4179</color>
+    <color name="colorTheme">#2E4179</color>
     <color name="click_bg">#45000000</color>
     <color name="colorWhite">#ffffff</color>
-    <color name="colorBackground">#f8f8f8</color>
+    <color name="colorBackground">#F2F4F8</color>
     <color name="colord9d9d9">#d9d9d9</color>
     <color name="colord2b2b2b">#2b2b2b</color>
     <color name="color3e3e3e">#3e3e3e</color>
+    <color name="color2D3D6D">#2D3D6D</color>
     <color name="color333333">#333333</color>
     <color name="colorAEAEAE">#AEAEAE</color>
     <color name="color4a4a4a">#4a4a4a</color>
