--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,4 +38,7 @@
     <color name="colorD0D0D0">#D0D0D0</color>
     <color name="blue">#00AAEE</color>
     <color name="transparent40">#66000000</color>
+
+    <color name="btn_cancel_color">#999999</color>
+    <color name="btn_confirm_color">#303F9F</color>
 </resources>
