--- a/app/src/main/res/layout/activity_sentries.xml
+++ b/app/src/main/res/layout/activity_sentries.xml
@@ -7,9 +7,43 @@
         android:layout_height="match_parent"
         android:background="#F2F4F8"
         android:orientation="vertical">
+       <TextView
+           android:layout_marginTop="20dp"
+           android:layout_marginLeft="25dp"
+           android:textSize="20sp"
+           android:text="查岗记录"
+           android:textColor="#333333"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" />
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            >
+            <com.zhy.autolayout.AutoLinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorBackground"
+                android:orientation="vertical">
+        <FrameLayout
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="25dp"
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+            </com.zhy.autolayout.AutoLinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
 
 
-
+        <Button
+            android:background="#36519E"
+            android:id="@+id/affirm"
+           android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:enabled="false"
+            android:textColor="@color/white"
+            android:text="一键查岗" />
 
     </com.zhy.autolayout.AutoLinearLayout>
 </layout>
