--- a/app/src/main/res/layout/fragemnt_mine.xml
+++ b/app/src/main/res/layout/fragemnt_mine.xml
@@ -9,20 +9,24 @@
         android:orientation="vertical">
 
         <com.zhy.autolayout.AutoLinearLayout
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="200px"
-            android:background="@color/white"
+            android:layout_height="250px"
+            android:background="@color/colorTheme"
             android:gravity="center"
             android:orientation="vertical">
-              <TextView
+              <ImageView
                   android:id="@+id/name"
-                  android:textColor="#323232"
-                  android:text="创源消防"
+                 android:background="@drawable/touxiang"
                   android:textSize="20sp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
-
+            <TextView
+                android:layout_marginTop="10dp"
+                android:text="151***76786"
+                android:id="@+id/tv_phone"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </com.zhy.autolayout.AutoLinearLayout>
         <com.zhy.autolayout.AutoRelativeLayout
             android:id="@+id/pwd"
