--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#F15453</color>
     <color name="colorPrimaryDark">#F15453</color>
     <color name="colorAccent">#F15453</color>
-    <color name="colorDefault">#2E4179</color>
+    <color name="colorDefault">#36519E</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorcccccc">#cccccc</color>
     <color name="colore6e6e6">#e6e6e6</color>
