--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,10 @@
     <color name="color999999">#999999</color>
     <color name="color666666">#666666</color>
     <color name="color000000">#000000</color>
+    <color name="color6B7BA8">#6B7BA8</color>
+    <color name="light_yellow">#FD542D</color>
+    <color name="blue_00b4f0">#00b4f0</color>
+
     <!-- Android standard ICS color -->
     <!-- Android standard ICS color -->
     <!-- Android standard ICS color -->
