--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,4 +81,29 @@
         <item name="android:windowNoTitle">true</item><!--无标题-->
     </style>
 
+
+    <style name="events_toolbar_radiobutton_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:button">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:textColor">@color/events_list_activity_toolbar_tab__title_text_color_selector2</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="events_toolbar_radiobutton_style2">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:button">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:textColor">@color/events_list_activity_toolbar_tab__title_text_color_selector</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+
 </resources>
