提交页面和接口

--- a/app/src/main/res/drawable/shape_theme.xml
+++ b/app/src/main/res/drawable/shape_theme.xml
@@ -3,5 +3,5 @@
     <gradient
         android:angle="90"
         android:endColor="#2E4179"
-        android:startColor="#37529F" />
+        android:startColor="@color/colorTheme" />
 </shape>
