--- a/app/src/main/res/layout/item_sign_layout.xml
+++ b/app/src/main/res/layout/item_sign_layout.xml
@@ -13,36 +13,23 @@
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2018.09.09"
+            android:text="2018.09.09 09:27:38"
             android:textColor="@color/color333333"
             android:textSize="30px" />
 
         <TextView
-            android:id="@+id/tv_sin_in_time"
+            android:id="@+id/tv_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_time"
-            android:layout_marginTop="10px"
-            android:text="签到时间：8:00"
-            android:textColor="@color/color666666"
-            android:textSize="28px" />
-
-        <TextView
-            android:id="@+id/tv_sin_out_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_time"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="10px"
-            android:layout_marginRight="30px"
-            android:text="签退时间：18:00"
-            android:textColor="@color/color666666"
-            android:textSize="28px" />
-
+            android:text="签到"
+            android:layout_marginLeft="30px"
+            android:layout_toRightOf="@+id/tv_time"
+            android:textColor="@color/btn_sign_color"
+            android:textSize="30px" />
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:layout_below="@+id/tv_sin_in_time"
+            android:layout_below="@+id/tv_time"
             android:layout_marginTop="16px"
             android:background="@color/colorLine" />
 
