--- a/app/src/main/res/layout/activity_record_detaul.xml
+++ b/app/src/main/res/layout/activity_record_detaul.xml
@@ -207,7 +207,7 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_below="@+id/view_line6"
-                        android:text="楼层："
+                        android:text="设备详情："
                         android:textColor="@color/color333333"
                         android:textSize="28px" />
 
@@ -234,6 +234,7 @@
                         android:background="@color/colorLine" />
 
                     <TextView
+                        android:visibility="gone"
                         android:id="@+id/tv_hint_8"
                         android:layout_width="200px"
                         android:layout_height="wrap_content"
@@ -243,6 +244,7 @@
                         android:textSize="28px" />
 
                     <TextView
+                        android:visibility="gone"
                         android:id="@+id/tv_8"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -254,7 +256,7 @@
                         android:textSize="28px" />
                     <!--级别-->
                     <View
-                        android:visibility="invisible"
+                        android:visibility="gone"
                         android:id="@+id/view_line8"
                         android:layout_width="match_parent"
                         android:layout_height="1px"
@@ -374,7 +376,7 @@
                         android:textSize="28px" />
 
                     <TextView
-                        android:visibility="invisible"
+
                         android:id="@+id/tv_11"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -403,12 +405,25 @@
                         android:text="单位地址："
                         android:textColor="@color/color333333"
                         android:textSize="28px" />
+                    <TextView
+
+                        android:id="@+id/tv_12"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/view_line10"
+                        android:layout_toRightOf="@+id/tv_hint_12"
+                        android:layout_alignBaseline="@+id/tv_hint_12"
+                        android:background="@color/colorWhite"
+                        android:textColor="@color/color333333"
+                        android:textSize="28px" />
 
                 </com.zhy.autolayout.AutoRelativeLayout>
 
 
 
                 <com.zhy.autolayout.AutoRelativeLayout
+                    android:id="@+id/rel_lay3"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_white"
@@ -460,7 +475,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/view_line"
                         android:layout_toRightOf="@+id/tv_hint_14"
-                        android:layout_alignBaseline="@+id/tv_hint_142"
+                        android:layout_alignBaseline="@+id/tv_hint_14"
                         android:background="@color/colorWhite"
                         android:textColor="@color/color333333"
                         android:textSize="28px" />
@@ -480,7 +495,7 @@
             android:orientation="horizontal">
             <Button
                 android:visibility="gone"
-                android:background="@drawable/shape_red_theme"
+                android:background="#FF9759"
                 android:id="@+id/affirm1"
                 android:layout_weight="1"
                 android:textColor="@color/white"
@@ -496,6 +511,16 @@
                 android:textColor="@color/white"
                 android:layout_height="70px"
                 android:text="确认收到通知"
+                />
+            <Button
+                android:visibility="gone"
+                android:background="@drawable/shape_common_theme"
+                android:id="@+id/affirm4"
+                android:layout_weight="1"
+                android:layout_width="0px"
+                android:textColor="@color/white"
+                android:layout_height="70px"
+                android:text="一键发起维保"
                 />
         </com.zhy.autolayout.AutoLinearLayout>
 
