--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -4,9 +4,9 @@
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/srl_body"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:layout_height="match_parent">
+        android:focusableInTouchMode="true">
 
 
         <android.support.v4.widget.NestedScrollView
@@ -53,6 +53,7 @@
                         android:textSize="30px" />
 
                     <TextView
+                        android:id="@+id/tv_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="重新定位"
