--- a/app/src/main/res/layout/activity_training_education.xml
+++ b/app/src/main/res/layout/activity_training_education.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:WebViewWithProgress="http://schemas.android.com/apk/res-auto">
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBackground"
         android:orientation="vertical">
-
+        <com.wb.weibao.utils.WebViewWithProgress
+        android:id="@+id/detail_webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none"
+        WebViewWithProgress:progressStyle="horizontal" />
 
     </com.zhy.autolayout.AutoLinearLayout>
     <!--<android.support.v7.widget.RecyclerView-->
