--- a/app/src/main/res/drawable/shape_theme.xml
+++ b/app/src/main/res/drawable/shape_theme.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:endColor="#2E4179"
+        android:endColor="@color/colorTheme"
         android:startColor="@color/colorTheme" />
 </shape>
