--- a/app/src/main/res/layout/activity_security_info.xml
+++ b/app/src/main/res/layout/activity_security_info.xml
@@ -93,6 +93,11 @@
             android:paddingBottom="24px"
             android:textColor="@color/color333333"
             android:textSize="28px" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
         <TextView
             android:id="@+id/tv_info1"
             android:layout_width="match_parent"
@@ -104,5 +109,36 @@
             android:paddingBottom="24px"
             android:textColor="@color/color333333"
             android:textSize="28px" />
+
+        <com.zhy.autolayout.AutoLinearLayout
+            android:id="@+id/lly_buttom"
+            android:layout_width="match_parent"
+            android:layout_height="98px"
+            android:visibility="gone"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_fail"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#FF9759"
+                android:gravity="center"
+                android:text="维保失败"
+                android:textColor="@color/colorWhite"
+                android:textSize="26px" />
+
+            <TextView
+                android:id="@+id/tv_ok"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#36519E"
+                android:gravity="center"
+                android:text="维保成功"
+                android:textColor="@color/colorWhite"
+                android:textSize="26px" />
+        </com.zhy.autolayout.AutoLinearLayout>
+
     </com.zhy.autolayout.AutoLinearLayout>
 </layout>
